[package]
name = "audioswitch"
version = "0.1.0"
edition = "2024"

[dependencies]
crc16 = "0.4.0"
defer = "0.2.1"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.3.1"
windows-core = "0.61.0"
windows-registry = "0.5.3"
windows-strings = "0.4.2"

[build-dependencies]
embed-resource = "3.0.2"

[dependencies.windows]
version = "0.61.1"
features = [
    "Devices_Custom",
    "Win32_Devices_FunctionDiscovery",
    "Win32_Graphics_Gdi",
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Variant",
    "Win32_UI_Shell_Common",
]
